Style fix alignment of button in package manager

--- a/console-web/webapp/src/main/resources/VAADIN/themes/openthinclient/views/packages.scss
+++ b/console-web/webapp/src/main/resources/VAADIN/themes/openthinclient/views/packages.scss
@@ -32,7 +32,7 @@
       line-height: 1;
       display: flex;
       flex-flow: column;
-      align-items: end;
+      align-items: flex-end;
 
       .v-button {
         margin-right: 1ch;
